--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -3,7 +3,7 @@ $base-dark: #e0e0e0;
 $base-light: #ffffff;
 $on-base: #000000;
 
-$primary: #0277bd;
+$primary: #3498DB;
 $primary-dark: #004c8c;
 $primary-light: #58a5f0;
 $on-primary: #ffffff;
@@ -12,9 +12,10 @@ $secondary: #f44336;
 $secondary-dark: #b90007;
 $secondary-light: #ff795d;
 $on-secondary: #ffffff;
+$secondary-1: #F1C40F;
 
 $error: #B00020;
 $on-error: #ffffff;
 
-$success: #004c8c;
-$on-success: #ffffff;
+$success: #1fd655;
+$on-success: #cefad0;
